FISH-8652: Downgrade set and list construction in JetJobPrunabilityTest